package mohamed.hakim.backend.enums;

public enum StatutCredit {
    EN_COURS,
    ACCEPTE,
    REJETE
}
