package mohamed.hakim.backend.enums;

public enum TypeBienImmobilier {
    APPARTEMENT,
    MAISON,
    LOCAL_COMMERCIAL
}
